# todobar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
docs/: ai-mcp-risk-register.md  ai-suggestion-schema.md  architecture-diagram.md  architecture.md  backlog.md  command-system-plan.md  data-model.md  decision-map.md  distribution-plan.md  gmail-integration.md  index.md  market-notes.md  mcp-connector-plan.md  milestone-0-implementation-plan.md  native-spike-checklist.md  native-test-matrix.md  open-source-plan.md  platform-notes-windows-macos.md  platform-support.md  privacy-and-telemetry-plan.md  product-ideas.md  product-spec-v0.md  product-vision.md  projektplan-kurz-de.md  release-checklist.md  release-verification-v0.1.1.md  release-verification-v0.1.10.md  release-verification-v0.1.11.md  release-verification-v0.1.12.md  release-verification-v0.1.13.md  release-verification-v0.1.14.md  release-verification-v0.1.2.md  release-verification-v0.1.3.md  release-verification-v0.1.4.md  release-verification-v0.1.5.md  release-verification-v0.1.6.md  release-verification-v0.1.7.md  release-verification-v0.1.8.md  release-verification-v0.1.9.md  research-2026-05-02.md  (+11 more)
scripts/: verify-project.mjs
src/: App.css  App.tsx  gmail.ts  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: gmail.rs  lib.rs  main.rs
(+78 files in other folders)
